<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mashjulal.android.cookmeal.activities.CreateIngredientsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_aCreateTimeProgram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@+id/ll_aAddIngredients_titles"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/toolbar_aCreateTimeProgram"
        android:background="@android:color/background_light"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="@string/title_Ingedient_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/title_quantity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_quantity_type" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_aAddIngredients_entries"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_aAddIngredients_titles"
        tools:listitem="@layout/item_edit_ingredient" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="30dp"
        android:clickable="true"
        android:onClick="onAddClick"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|right"
        app:srcCompat="@drawable/ic_add_white" />
</RelativeLayout>
